feat(GRaPPA): remove member key update for now and fix admin commands
