# openapi/ds-openapi.yml
@@ -13,6 +13,7 @@ paths:
       tags:
       - crate
       summary: Return JSON version of an OpenAPI schema
+      description: Return JSON version of an OpenAPI schema
       operationId: openapi
       responses:
         '200':
@@ -22,6 +23,7 @@ paths:
       tags:
       - crate
       summary: List all the folders in which the user participates.
+      description: List all the folders in which the user participates.
       operationId: list_folders_for_user
       responses:
         '200':
@@ -38,6 +40,7 @@ paths:
       tags:
       - crate
       summary: Create a new folder and link it to the user.
+      description: Create a new folder and link it to the user.
       operationId: create_folder
       requestBody:
         content:
@@ -61,6 +64,7 @@ paths:
       tags:
       - crate
       summary: List all the users.
+      description: List all the users.
       operationId: get_folder
       parameters:
       - name: folder_id
@@ -88,6 +92,7 @@ paths:
       tags:
       - crate
       summary: Unshare a folder with other users.
+      description: Unshare a folder with other users.
       operationId: remove_self_from_folder
       parameters:
       - name: folder_id
@@ -111,7 +116,9 @@ paths:
       tags:
       - crate
       summary: Share a folder with other users.
-      description: If some of the users already can see the folder, they will be ignored.
+      description: |-
+        Share a folder with other users.
+        If some of the users already can see the folder, they will be ignored.
       operationId: share_folder
       parameters:
       - name: folder_id
@@ -142,6 +149,7 @@ paths:
       tags:
       - crate
       summary: Get a file from the cloud storage.
+      description: Get a file from the cloud storage.
       operationId: get_file
       parameters:
       - name: folder_id
@@ -175,6 +183,7 @@ paths:
       tags:
       - crate
       summary: Upload a file to the cloud storage.
+      description: Upload a file to the cloud storage.
       operationId: upload_file
       parameters:
       - name: folder_id
@@ -242,6 +251,7 @@ paths:
       tags:
       - crate
       summary: Get the metadata of a folder. The metadata contain the list of files and their metadata.
+      description: Get the metadata of a folder. The metadata contain the list of files and their metadata.
       operationId: get_metadata
       parameters:
       - name: folder_id
@@ -269,6 +279,7 @@ paths:
       tags:
       - crate
       summary: Upload a new version of the metadata of a folder. The metadata contain the list of files and their metadata.
+      description: Upload a new version of the metadata of a folder. The metadata contain the list of files and their metadata.
       operationId: post_metadata
       parameters:
       - name: folder_id
@@ -319,6 +330,8 @@ paths:
           description: Unkwown or unauthorized user.
         '404':
           description: Not found.
+        '429':
+          description: Too many requests.
         '500':
           description: Internal Server Error
     post:
@@ -338,15 +351,47 @@ paths:
         content:
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/CreateGroupMessageRequest'
+              $ref: '#/components/schemas/ProposalMessageRequest'
         required: true
       responses:
         '200':
           description: Create a proposal.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProposalResponse'
         '401':
           description: Unkwown or unauthorized user.
         '409':
           description: 'Conflict: the user state is outdated, please fetch the pending proposals first.'
+        '500':
+          description: Internal Server Error
+    patch:
+      tags:
+      - crate
+      operationId: try_publish_application_msg
+      parameters:
+      - name: folder_id
+        in: path
+        description: Folder id.
+        required: true
+        schema:
+          type: integer
+          format: int64
+          minimum: 0
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/ApplicationMessageRequest'
+        required: true
+      responses:
+        '200':
+          description: Added application message.
+        '401':
+          description: Unkwown or unauthorized user.
+        '404':
+          description: Not found.
         '500':
           description: Internal Server Error
   /folders/{folder_id}/proposals/{message_id}:
@@ -354,6 +399,7 @@ paths:
       tags:
       - crate
       summary: Delete a proposal message.
+      description: Delete a proposal message.
       operationId: ack_message
       parameters:
       - name: folder_id
@@ -381,70 +427,12 @@ paths:
           description: Not found.
         '500':
           description: Internal Server Error, couldn't delete the message
-  /folders/{folder_id}/welcomes:
-    get:
-      tags:
-      - crate
-      operationId: get_welcome
-      parameters:
-      - name: folder_id
-        in: path
-        description: Folder id.
-        required: true
-        schema:
-          type: integer
-          format: int64
-          minimum: 0
-      responses:
-        '200':
-          description: Retrieved the eldest proposal.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GroupMessage'
-        '401':
-          description: Unkwown or unauthorized user.
-        '404':
-          description: Not found.
-        '500':
-          description: Internal Server Error
-  /folders/{folder_id}/welcomes/{message_id}:
-    delete:
-      tags:
-      - crate
-      summary: Delete a welcome message.
-      operationId: ack_welcome
-      parameters:
-      - name: folder_id
-        in: path
-        description: The folder id.
-        required: true
-        schema:
-          type: integer
-          format: int64
-          minimum: 0
-      - name: message_id
-        in: path
-        description: The welcome message to delete.
-        required: true
-        schema:
-          type: integer
-          format: int64
-          minimum: 0
-      responses:
-        '200':
-          description: Welcome message removed from the db.
-        '401':
-          description: Unkwown or unauthorized user.
-        '404':
-          description: Not found.
-        '500':
-          description: Internal Server Error, couldn't delete the message
   /users:
     get:
       tags:
       - crate
       summary: List all the users.
+      description: List all the users.
       operationId: list_users
       responses:
         '200':
@@ -461,6 +449,7 @@ paths:
       tags:
       - crate
       summary: Create a new user checking that the client certificate contains the email that is used to create the account.
+      description: Create a new user checking that the client certificate contains the email that is used to create the account.
       operationId: create_user
       requestBody:
         content:
@@ -500,6 +489,7 @@ paths:
       tags:
       - crate
       summary: Share a folder with another user.
+      description: Share a folder with another user.
       operationId: v2_share_folder
       parameters:
       - name: folder_id
@@ -519,6 +509,10 @@ paths:
       responses:
         '200':
           description: Folder shared.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProposalResponse'
         '401':
           description: Unkwown or unauthorized user.
         '404':
@@ -527,38 +521,26 @@ paths:
           description: 'Conflict: client status out of sync.'
         '500':
           description: Internal Server Error, couldn't retrieve the users
-  /v2/folders/{folder_id}/welcomes:
-    patch:
-      tags:
-      - crate
-      summary: Share a folder with another user.
-      operationId: v2_share_folder_welcome
-      parameters:
-      - name: folder_id
-        in: path
-        description: Folder id.
-        required: true
-        schema:
-          type: integer
-          format: int64
-          minimum: 0
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/ShareFolderRequestWithProposal'
-        required: true
-      responses:
-        '200':
-          description: Folder shared.
-        '401':
-          description: Unkwown or unauthorized user.
-        '404':
-          description: Not found.
-        '500':
-          description: Internal Server Error, couldn't retrieve the users
 components:
   schemas:
+    ApplicationMessageRequest:
+      type: object
+      description: Patch a proposal, publishing an application message.
+      required:
+      - payload
+      - message_ids
+      properties:
+        message_ids:
+          type: array
+          items:
+            type: integer
+            format: int64
+            minimum: 0
+          description: The message ids to which the application message is related.
+        payload:
+          type: string
+          format: binary
+          description: The proposal to upload.
     CreateFolderRequest:
       type: object
       description: Create the folder with the initial Metadata file.
@@ -569,16 +551,6 @@ components:
           type: string
           format: binary
           description: The metadata file to upload.
-    CreateGroupMessageRequest:
-      type: object
-      description: Create a proposal.
-      required:
-      - proposal
-      properties:
-        proposal:
-          type: string
-          format: binary
-          description: The proposal to upload.
     CreateKeyPackageRequest:
       type: object
       description: Create a key package for a user.
@@ -666,7 +638,12 @@ components:
       - message_id
       - folder_id
       - payload
+      - application_payload
       properties:
+        application_payload:
+          type: string
+          format: binary
+          description: The application that should handle the message.
         folder_id:
           type: integer
           format: int64
@@ -719,6 +696,27 @@ components:
           type: string
           description: The previous metadata version to which this file is related.
           nullable: true
+    ProposalMessageRequest:
+      type: object
+      description: Create a proposal.
+      required:
+      - proposal
+      properties:
+        proposal:
+          type: string
+          format: binary
+          description: The proposal to upload.
+    ProposalResponse:
+      type: object
+      required:
+      - message_ids
+      properties:
+        message_ids:
+          type: array
+          items:
+            type: integer
+            format: int64
+            minimum: 0
     ShareFolderRequest:
       type: object
       required:
